CHANGES:

21/10/2012:
- try to improve a little the FullWrite Professional parser
  ( understand better two of the three main structures + begin to
    send rulers, some anchor picture and some variable picture )

10/31/2012: ----- version 1.3 ---------

09/10/2012:
- add a Microsoft Word parser for v1 and v3 (incomplete)
09/30/2012:
- try to improve a little the claris/appleworks parser
  ( reconstruct the table, build the graph structure + begin to
    try to send some pages anchor picture/... )
- add vcproj and vcxproj files (inpired by libwps, not tested)

09/15/2012:
- add Nisus Writer 4.0 parser
- add code to read zip and binhexed files 
    and so retrieve the resource fork
- try to sign the libraries and the executable:
    lib[mwaw|wpd|wpg]*.dylib and mwaw2odt

07/31/2012: ----- version 1.2 ---------

07/30/2012:
- retrieve tables and pictures in Microsoft Word 4-5
  document (incomplete)
07/16/2012:
- add Microsoft Works 4.0 parser

06/28/2012:
- add MindWrite 2.1 parser

06/28/2012: ----- version 1.1 ---------

05/28/2012:
- add a Microsoft Works 3.0 parser

05/20/2012: ----- version 1.0 ---------
- rename all the files to simplify the hierarchy,
  which implies a major version bump:-~,

04/14/2012: 
- add Microsoft Works 1.0, 2.0 parser
- add a crude parser for FullWrite Professional

03/17/2012: 
- tags 0.0.2

03/13/2012:
- add MacWrite II, MacWrite Pro 1.5, WriteNow v1.0-v2.0 parser
- add Microsoft Word v4.0-v5.0 parser
  ( crude version which retrieves the text)

02/04/2012:
- add parser for MacWrite Pro 1.0
- tags 0.0.1

01/12/2012: add first version of WriteNow 3.0 and 4.0 Parser 

12/19/2011: creation
- libmwaw created from on version of libwps.
- add first version of MacWrite 4.5 and ClarisWorks/AppleWorks Parser
